add related repos

--- a/.verb.md
+++ b/.verb.md
@@ -123,3 +123,10 @@ await openFileManager('/path/to/dir');
 - On Windows, if a file doesn't exist, it will open the parent directory instead
 - On Linux, the function will try multiple file managers and use the first one available
 - Supports FreeBSD, OpenBSD, and SunOS in addition to major platforms
+
+
+## Related
+
+You might also be interested in:
+
+{%= related(pkg.verb.related) %}
